// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Processor UI components Processor add button Renders with  label prop matches snapshot 1`] = `
<div>
  <button
    onClick={[Function]}
  >
    Hi Roy
  </button>
</div>
`;

exports[`Processor UI components Processor add button Renders with default label matches snapshot 1`] = `
<div>
  <button
    onClick={[Function]}
  >
    NewProcessor Processor
  </button>
</div>
`;

exports[`Processor UI components Processors list component renders with 1 processor 1`] = `
<div>
  <div>
    <div
      className=""
    >
      <div
        className="processor-label"
      >
        Main Email
      </div>
      <div>
        Type: 
        <span
          className="processor-type"
        />
      </div>
    </div>
    <button
      className={undefined}
      onClick={[Function]}
      style={undefined}
    >
      <span>
        Edit Settings
      </span>
    </button>
    <button
      className={undefined}
      onClick={[Function]}
      style={undefined}
    >
      <span>
        Remove Processor
      </span>
    </button>
  </div>
</div>
`;

exports[`Processor UI components Processors list component renders with 2 processors 1`] = `
<div>
  <div>
    <div
      className=""
    >
      <div
        className="processor-label"
      >
        Main Email
      </div>
      <div>
        Type: 
        <span
          className="processor-type"
        />
      </div>
    </div>
    <button
      className={undefined}
      onClick={[Function]}
      style={undefined}
    >
      <span>
        Edit Settings
      </span>
    </button>
    <button
      className={undefined}
      onClick={[Function]}
      style={undefined}
    >
      <span>
        Remove Processor
      </span>
    </button>
  </div>
</div>
`;
